--- a/categories.html
+++ b/categories.html
@@ -10,19 +10,18 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="https://gweindel.github.io/theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
-    <link href="https://gweindel.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Personal Website Atom">
 
 
 
@@ -35,7 +34,8 @@
 <meta property="og:title" content="Personal Website"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://gweindel.github.io"/>
+<meta property="og:url" content=""/>
+<meta property="og:image" content="img/profile.png">
 
   <title>Personal Website &ndash; Categories</title>
 
@@ -43,12 +43,12 @@
 <body class="light-theme">
   <aside>
     <div>
-      <a href="https://gweindel.github.io">
-        <img src="https://gweindel.github.io/theme/img/profile.png" alt="" title="">
+      <a href="">
+        <img src="img/profile.png" alt="" title="">
       </a>
 
       <h1>
-        <a href="https://gweindel.github.io"></a>
+        <a href=""></a>
       </h1>
 
 
@@ -98,7 +98,7 @@
   <div>
     <ul class="list">
       <li>
-        <a href="https://gweindel.github.io/category/posts.html">posts</a> (1)
+        <a href="/category/posts.html">posts</a> (1)
       </li>
     </ul>
   </div>
@@ -119,8 +119,8 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Personal Website ",
-  "url" : "https://gweindel.github.io",
-  "image": "",
+  "url" : "",
+  "image": "img/profile.png",
   "description": ""
 }
 </script>
