--- a/introduction.html
+++ b/introduction.html
@@ -10,55 +10,54 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="https://gweindel.github.io/theme/pygments/github.min.css">
+          href="/theme/pygments/github.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
 
 
-    <link href="https://gweindel.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Personal Website Atom">
 
 
 
 
 
 <meta name="author" content="Gabriel Weindel" />
-<meta name="description" content="" />
+<meta name="description" content="A bit about myself" />
 <meta name="keywords" content="CV, introduction">
 
 
 <meta property="og:site_name" content="Personal Website"/>
-<meta property="og:title" content="Introducing myself"/>
-<meta property="og:description" content=""/>
+<meta property="og:title" content="Hello"/>
+<meta property="og:description" content="A bit about myself"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://gweindel.github.io/introduction.html"/>
+<meta property="og:url" content="/introduction.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-04-06 10:20:00+02:00"/>
 <meta property="article:modified_time" content="2020-04-06 10:20:00+02:00"/>
-<meta property="article:author" content="https://gweindel.github.io/author/gabriel-weindel.html">
+<meta property="article:author" content="/author/gabriel-weindel.html">
 <meta property="article:section" content="posts"/>
 <meta property="article:tag" content="CV"/>
 <meta property="article:tag" content="introduction"/>
-<meta property="og:image" content="">
+<meta property="og:image" content="img/profile.png">
 
-  <title>Personal Website &ndash; Introducing myself</title>
+  <title>Personal Website &ndash; Hello</title>
 
 </head>
 <body class="light-theme">
   <aside>
     <div>
-      <a href="https://gweindel.github.io">
-        <img src="https://gweindel.github.io/theme/img/profile.png" alt="" title="">
+      <a href="">
+        <img src="img/profile.png" alt="" title="">
       </a>
 
       <h1>
-        <a href="https://gweindel.github.io"></a>
+        <a href=""></a>
       </h1>
 
 
@@ -104,21 +103,23 @@
 <article class="single">
   <header>
       
-    <h1 id="introduction">Introducing myself</h1>
+    <h1 id="introduction">Hello</h1>
     <p>
-      Posted on lun. 06 avril 2020 in <a href="https://gweindel.github.io/category/posts.html">posts</a>
+      Posted on lun. 06 avril 2020 in <a href="/category/posts.html">posts</a>
 
     </p>
   </header>
 
 
   <div>
-    <p>This is where I am going to introduce myself</p>
+    <p>A bit about myself</p>
+<p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. </p>
+<p>%I am also providing </p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="https://gweindel.github.io/tag/cv.html">CV</a>
-      <a href="https://gweindel.github.io/tag/introduction.html">introduction</a>
+      <a href="/tag/cv.html">CV</a>
+      <a href="/tag/introduction.html">introduction</a>
     </p>
   </div>
 
@@ -143,8 +144,8 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Personal Website ",
-  "url" : "https://gweindel.github.io",
-  "image": "",
+  "url" : "",
+  "image": "img/profile.png",
   "description": ""
 }
 </script>
