--- a/archives.html
+++ b/archives.html
@@ -10,18 +10,19 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/github.min.css">
+          href="https://gweindel.github.io/theme/pygments/github.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/solid.css">
 
 
+    <link href="https://gweindel.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Personal Website Atom">
 
 
 
@@ -34,7 +35,7 @@
 <meta property="og:title" content="Personal Website"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="https://gweindel.github.io"/>
 <meta property="og:image" content="img/profile.png">
 
   <title>Personal Website &ndash; Archives</title>
@@ -43,12 +44,12 @@
 <body class="light-theme">
   <aside>
     <div>
-      <a href="">
+      <a href="https://gweindel.github.io">
         <img src="img/profile.png" alt="" title="">
       </a>
 
       <h1>
-        <a href=""></a>
+        <a href="https://gweindel.github.io"></a>
       </h1>
 
 
@@ -101,7 +102,7 @@
           <dt>lun. 06 avril 2020</dt>
 
         <dd>
-          <a href="/introduction.html">Hello</a>
+          <a href="https://gweindel.github.io/introduction.html">Hello</a>
         </dd>
     </dl>
   </div>
@@ -122,7 +123,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Personal Website ",
-  "url" : "",
+  "url" : "https://gweindel.github.io",
   "image": "img/profile.png",
   "description": ""
 }
