--- a/introduction.html
+++ b/introduction.html
@@ -10,18 +10,19 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/github.min.css">
+          href="https://gweindel.github.io/theme/pygments/github.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/solid.css">
 
 
+    <link href="https://gweindel.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Personal Website Atom">
 
 
 
@@ -36,11 +37,11 @@
 <meta property="og:title" content="Hello"/>
 <meta property="og:description" content="A bit about myself"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/introduction.html"/>
+<meta property="og:url" content="https://gweindel.github.io/introduction.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-04-06 10:20:00+02:00"/>
 <meta property="article:modified_time" content="2020-04-06 10:20:00+02:00"/>
-<meta property="article:author" content="/author/gabriel-weindel.html">
+<meta property="article:author" content="https://gweindel.github.io/author/gabriel-weindel.html">
 <meta property="article:section" content="posts"/>
 <meta property="article:tag" content="CV"/>
 <meta property="article:tag" content="introduction"/>
@@ -52,12 +53,12 @@
 <body class="light-theme">
   <aside>
     <div>
-      <a href="">
+      <a href="https://gweindel.github.io">
         <img src="img/profile.png" alt="" title="">
       </a>
 
       <h1>
-        <a href=""></a>
+        <a href="https://gweindel.github.io"></a>
       </h1>
 
 
@@ -105,7 +106,7 @@
       
     <h1 id="introduction">Hello</h1>
     <p>
-      Posted on lun. 06 avril 2020 in <a href="/category/posts.html">posts</a>
+      Posted on lun. 06 avril 2020 in <a href="https://gweindel.github.io/category/posts.html">posts</a>
 
     </p>
   </header>
@@ -118,8 +119,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/cv.html">CV</a>
-      <a href="/tag/introduction.html">introduction</a>
+      <a href="https://gweindel.github.io/tag/cv.html">CV</a>
+      <a href="https://gweindel.github.io/tag/introduction.html">introduction</a>
     </p>
   </div>
 
@@ -144,7 +145,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Personal Website ",
-  "url" : "",
+  "url" : "https://gweindel.github.io",
   "image": "img/profile.png",
   "description": ""
 }
