--- a/phd.html
+++ b/phd.html
@@ -36,19 +36,25 @@
     <!-- Microsoft EDGE -->
     <meta name="msapplication-TileColor" content="white">
 
-    <meta name="author" content="Gabriel Weindel" />
-    <meta name="description" content="Blog posts and thoughts on cognitive science 
- (under construction)." />
+<meta name="author" content="Gabriel Weindel" />
+<meta name="description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at]gmail …" />
+<meta name="keywords" content="PhD">
+
+
 <meta property="og:site_name" content="Gabriel Weindel"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="Gabriel Weindel"/>
-<meta property="og:description" content="Blog posts and thoughts on cognitive science 
- (under construction)."/>
+<meta property="og:title" content="PhD"/>
+<meta property="og:description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at]gmail …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="/phd.html"/>
+<meta property="og:type" content="article"/>
+<meta property="article:published_time" content="2020-04-08 14:10:00+02:00"/>
+<meta property="article:modified_time" content="2020-04-08 14:10:00+02:00"/>
+<meta property="article:author" content="/author/gabriel-weindel.html">
+<meta property="article:section" content="content"/>
+<meta property="article:tag" content="PhD"/>
 <meta property="og:image" content="img/profile.png">
 
-  <title>Gabriel Weindel &ndash; Tags</title>
+  <title>Gabriel Weindel &ndash; PhD</title>
 
 </head>
 <body class="white-theme">
@@ -99,14 +105,29 @@
 
 <article class="single">
   <header>
-    <h1 id="tags">Tags</h1>
+      
+    <h1 id="phd">PhD</h1>
+    <p>
+      Posted on mer. 08 avril 2020 in <a href="/category/content.html">content</a>
+
+    </p>
   </header>
+
+
   <div>
-    <ul class="list">          <li><a href="/tag/cv.html">CV</a> (1)</li>
-          <li><a href="/tag/introduction.html">introduction</a> (1)</li>
-          <li><a href="/tag/phd.html">PhD</a> (1)</li>
-    </ul>
+    <p>The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative. This page will be updated as soon as the document is ready.</p>
+<p>In the mean time you can drop a message via email (firstname.lastname[at]gmail.com) or twitter, you can also check the github repository on https://www.github.com/GWeindel/PhD_thesis.</p>
   </div>
+  <div class="tag-cloud">
+    <p>
+      <a href="/tag/phd.html">PhD</a>
+    </p>
+  </div>
+
+
+
+
+
 </article>
 
     <footer>
