--- a/phd.html
+++ b/phd.html
@@ -37,13 +37,13 @@
     <meta name="msapplication-TileColor" content="white">
 
 <meta name="author" content="Gabriel Weindel" />
-<meta name="description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at]gmail …" />
+<meta name="description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …" />
 <meta name="keywords" content="PhD">
 
 
 <meta property="og:site_name" content="Gabriel Weindel"/>
 <meta property="og:title" content="PhD"/>
-<meta property="og:description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at]gmail …"/>
+<meta property="og:description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="/phd.html"/>
 <meta property="og:type" content="article"/>
@@ -68,8 +68,7 @@
         <a href="">Gabriel Weindel's website</a>
       </h1>
 
-<p>Blog posts and thoughts on cognitive science 
- (under construction).</p>
+<p>Blog posts and thoughts on cognitive science (under construction).</p>
 
 
       <ul class="social">
@@ -115,7 +114,7 @@
 
 
   <div>
-    <p>The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative. This page will be updated as soon as the document is ready.</p>
+    <p>The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready.</p>
 <p>In the mean time you can drop a message via email (firstname.lastname[at]gmail.com) or twitter, you can also check the github repository on https://www.github.com/GWeindel/PhD_thesis.</p>
   </div>
   <div class="tag-cloud">
@@ -147,8 +146,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "name": " Gabriel Weindel ",
   "url" : "",
   "image": "img/profile.png",
-  "description": "Blog posts and thoughts on cognitive science 
- (under construction)."
+  "description": "Blog posts and thoughts on cognitive science (under construction)."
 }
 </script>
 <a href="https://github.com/GWeindel/" class="github-corner" aria-label="View source on Github">
