--- a/tags.html
+++ b/tags.html
@@ -37,13 +37,11 @@
     <meta name="msapplication-TileColor" content="white">
 
     <meta name="author" content="Gabriel Weindel" />
-    <meta name="description" content="Blog posts and thoughts on cognitive science 
- (under construction)." />
+    <meta name="description" content="Blog posts and thoughts on cognitive science (under construction)." />
 <meta property="og:site_name" content="Gabriel Weindel"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="Gabriel Weindel"/>
-<meta property="og:description" content="Blog posts and thoughts on cognitive science 
- (under construction)."/>
+<meta property="og:description" content="Blog posts and thoughts on cognitive science (under construction)."/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
 <meta property="og:image" content="img/profile.png">
@@ -62,8 +60,7 @@
         <a href="">Gabriel Weindel's website</a>
       </h1>
 
-<p>Blog posts and thoughts on cognitive science 
- (under construction).</p>
+<p>Blog posts and thoughts on cognitive science (under construction).</p>
 
 
       <ul class="social">
@@ -126,8 +123,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "name": " Gabriel Weindel ",
   "url" : "",
   "image": "img/profile.png",
-  "description": "Blog posts and thoughts on cognitive science 
- (under construction)."
+  "description": "Blog posts and thoughts on cognitive science (under construction)."
 }
 </script>
 <a href="https://github.com/GWeindel/" class="github-corner" aria-label="View source on Github">
