--- a/introduction.html
+++ b/introduction.html
@@ -69,8 +69,7 @@
         <a href="">Gabriel Weindel's website</a>
       </h1>
 
-<p>Blog posts and thoughts on cognitive science 
- (under construction).</p>
+<p>Blog posts and thoughts on cognitive science (under construction).</p>
 
 
       <ul class="social">
@@ -150,8 +149,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "name": " Gabriel Weindel ",
   "url" : "",
   "image": "img/profile.png",
-  "description": "Blog posts and thoughts on cognitive science 
- (under construction)."
+  "description": "Blog posts and thoughts on cognitive science (under construction)."
 }
 </script>
 <a href="https://github.com/GWeindel/" class="github-corner" aria-label="View source on Github">
