--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -46,7 +46,9 @@
 <meta property="og:url" content=""/>
 <meta property="og:image" content="img/profile.png">
 
-  <title>Gabriel Weindel &ndash; Authors</title>
+
+
+  <title>Gabriel Weindel &ndash; Introducing myself</title>
 
 </head>
 <body class="white-theme">
@@ -109,13 +111,13 @@
 
 <article class="single">
   <header>
-    <h1 id="authors">Authors</h1>
+    
+    <h1 id="introduction">Introducing myself</h1>
   </header>
   <div>
-    <ul class="list">
-      <li><a href="/author/gabriel-weindel.html">Gabriel Weindel</a> (2)</li>
-    </ul>
-  </div>
+<p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. </p>
+<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to population with cognitive deficits. I usually </p>
+<p>%I am also providing </p>  </div>
 </article>
 
     <footer>
