--- a/phd.html
+++ b/phd.html
@@ -70,6 +70,19 @@
 
 <p>Blog posts and thoughts on cognitive science (under construction).</p>
 
+      <nav>
+        <ul class="list">
+
+
+              <li>
+                <a target="_self"
+                   href="/pages/introduction.html#introduction">
+                  Introducing myself
+                </a>
+              </li>
+
+        </ul>
+      </nav>
 
       <ul class="social">
           <li>
