--- a/introduction.html
+++ b/introduction.html
@@ -71,6 +71,19 @@
 
 <p>Blog posts and thoughts on cognitive science (under construction).</p>
 
+      <nav>
+        <ul class="list">
+
+
+              <li>
+                <a target="_self"
+                   href="/pages/introduction.html#introduction">
+                  Introducing myself
+                </a>
+              </li>
+
+        </ul>
+      </nav>
 
       <ul class="social">
           <li>
@@ -116,8 +129,8 @@
 
   <div>
     <p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. </p>
-<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to population with cognitive deficits. I usually </p>
-<p>%I am also providing </p>
+<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to population with cognitive deficits.</p>
+<p>For a detailed summary of my curriculm see my <a href="pdfs/CV_GW.pdf">CV</a></p>
   </div>
   <div class="tag-cloud">
     <p>
