Relative paths and main page

--- a/archives.html
+++ b/archives.html
@@ -101,8 +101,8 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="https://gweindel.github.io/introduction.html#introduction">About Me</a>
-      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
+      <a href="introduction.html">About Me</a>
+      <a href="category/posts.html">Posts</a>
 
 
     </nav>
@@ -118,11 +118,6 @@
 
         <dd>
           <a href="/phd.html">PhD</a>
-        </dd>
-          <dt>lun. 06 avril 2020</dt>
-
-        <dd>
-          <a href="/introduction.html">Introducing myself</a>
         </dd>
     </dl>
   </div>
