--- a/introduction.html
+++ b/introduction.html
@@ -50,7 +50,7 @@
 <meta property="article:published_time" content="2020-04-06 10:20:00+02:00"/>
 <meta property="article:modified_time" content="2020-04-06 10:20:00+02:00"/>
 <meta property="article:author" content="/author/gabriel-weindel.html">
-<meta property="article:section" content="posts"/>
+<meta property="article:section" content="pages"/>
 <meta property="article:tag" content="CV"/>
 <meta property="article:tag" content="introduction"/>
 <meta property="og:image" content="img/profile.png">
@@ -121,7 +121,7 @@
       
     <h1 id="introduction">Introducing myself</h1>
     <p>
-      Posted on lun. 06 avril 2020 in <a href="/category/posts.html">posts</a>
+      Posted on lun. 06 avril 2020 in <a href="/category/pages.html">pages</a>
 
     </p>
   </header>
@@ -129,7 +129,7 @@
 
   <div>
     <p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. </p>
-<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to population with cognitive deficits.</p>
+<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits.</p>
 <p>For a detailed summary of my curriculm see my <a href="pdfs/CV_GW.pdf">CV</a></p>
   </div>
   <div class="tag-cloud">
