--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -103,8 +103,8 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="https://gweindel.github.io/introduction.html#introduction">About Me</a>
-      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
+      <a href="introduction.html">About Me</a>
+      <a href="category/posts.html">Posts</a>
 
 
     </nav>
