--- a/authors.html
+++ b/authors.html
@@ -101,8 +101,8 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="https://gweindel.github.io/introduction.html#introduction">About Me</a>
-      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
+      <a href="introduction.html">About Me</a>
+      <a href="category/posts.html">Posts</a>
 
 
     </nav>
@@ -113,7 +113,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="/author/gabriel-weindel.html">Gabriel Weindel</a> (2)</li>
+      <li><a href="/author/gabriel-weindel.html">Gabriel Weindel</a> (1)</li>
     </ul>
   </div>
 </article>
