--- a/categories.html
+++ b/categories.html
@@ -101,8 +101,8 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="https://gweindel.github.io/introduction.html#introduction">About Me</a>
-      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
+      <a href="introduction.html">About Me</a>
+      <a href="category/posts.html">Posts</a>
 
 
     </nav>
@@ -113,9 +113,6 @@
   </header>
   <div>
     <ul class="list">
-      <li>
-        <a href="/category/content.html">content</a> (1)
-      </li>
       <li>
         <a href="/category/posts.html">posts</a> (1)
       </li>
