--- a/introducing-myself.html
+++ b/introducing-myself.html
@@ -37,24 +37,23 @@
     <meta name="msapplication-TileColor" content="white">
 
 <meta name="author" content="Gabriel Weindel" />
-<meta name="description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …" />
-<meta name="keywords" content="PhD">
+<meta name="description" content="My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives." />
+<meta name="keywords" content="">
 
 
 <meta property="og:site_name" content="Gabriel Weindel"/>
-<meta property="og:title" content="PhD"/>
-<meta property="og:description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …"/>
+<meta property="og:title" content="Introducing myself"/>
+<meta property="og:description" content="My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/phd.html"/>
+<meta property="og:url" content="/introducing-myself.html"/>
 <meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2020-04-08 14:10:00+02:00"/>
-<meta property="article:modified_time" content="2020-04-08 14:10:00+02:00"/>
+<meta property="article:published_time" content="2020-04-06 10:20:00+02:00"/>
+<meta property="article:modified_time" content="2020-04-06 10:20:00+02:00"/>
 <meta property="article:author" content="/author/gabriel-weindel.html">
 <meta property="article:section" content="posts"/>
-<meta property="article:tag" content="PhD"/>
 <meta property="og:image" content="img/profile.png">
 
-  <title>Gabriel Weindel &ndash; PhD</title>
+  <title>Gabriel Weindel &ndash; Introducing myself</title>
 
 </head>
 <body class="white-theme">
@@ -109,8 +108,8 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="introduction.html">About Me</a>
-      <a href="category/posts.html">Posts</a>
+      <a href="https://gweindel.github.io/introduction.html#introduction">About Me</a>
+      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
 
 
     </nav>
@@ -118,21 +117,21 @@
 <article class="single">
   <header>
       
-    <h1 id="phd">PhD</h1>
+    <h1 id="introducing-myself">Introducing myself</h1>
     <p>
-      Posted on mer. 08 avril 2020 in <a href="/category/posts.html">posts</a>
+      Posted on lun. 06 avril 2020 in <a href="/category/posts.html">posts</a>
 
     </p>
   </header>
 
 
   <div>
-    <p>The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready.</p>
-<p>In the mean time you can drop a message via email (firstname.lastname[at]gmail.com) or twitter, you can also check the github repository on https://www.github.com/GWeindel/PhD_thesis.</p>
+    <p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. </p>
+<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits.</p>
+<p>For a detailed summary of my curriculm see my <a href="pdfs/CV_GW.pdf">CV</a></p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/phd.html">PhD</a>
     </p>
   </div>
 
