--- a/tags.html
+++ b/tags.html
@@ -101,8 +101,8 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="https://gweindel.github.io/introduction.html#introduction">About Me</a>
-      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
+      <a href="introduction.html">About Me</a>
+      <a href="category/posts.html">Posts</a>
 
 
     </nav>
@@ -112,9 +112,7 @@
     <h1 id="tags">Tags</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="/tag/cv.html">CV</a> (1)</li>
-          <li><a href="/tag/introduction.html">introduction</a> (1)</li>
-          <li><a href="/tag/phd.html">PhD</a> (1)</li>
+    <ul class="list">          <li><a href="/tag/phd.html">PhD</a> (1)</li>
     </ul>
   </div>
 </article>
