--- a/phd.html
+++ b/phd.html
@@ -109,7 +109,7 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="introduction.html">About Me</a>
+      <a href="pages.html">About Me</a>
       <a href="posts.html">Posts</a>
 
 
