Trying to fix rel paths

--- a/phd.html
+++ b/phd.html
@@ -109,8 +109,8 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="pages.html">About Me</a>
-      <a href="posts.html">Posts</a>
+      <a href="category/pages.html">About Me</a>
+      <a href="category/posts.html">Posts</a>
 
 
     </nav>
