--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -103,8 +103,8 @@
     <nav>
       <a href="">Home</a>
 
-      <a href="pages.html">About Me</a>
-      <a href="posts.html">Posts</a>
+      <a href="category/pages.html">About Me</a>
+      <a href="category/posts.html">Posts</a>
 
 
     </nav>
