--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/stylesheet/style.min.css">
 
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/solid.css">
 
 
 
@@ -43,7 +43,7 @@
 <meta property="og:title" content="Gabriel Weindel"/>
 <meta property="og:description" content="Blog posts and thoughts on cognitive science (under construction)."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="https://gweindel.github.io"/>
 <meta property="og:image" content="img/profile.png">
 
   <title>Gabriel Weindel</title>
@@ -52,12 +52,12 @@
 <body class="white-theme">
   <aside>
     <div>
-      <a href="">
+      <a href="https://gweindel.github.io">
         <img src="img/profile.png" alt="Gabriel Weindel's website" title="Gabriel Weindel's website">
       </a>
 
       <h1>
-        <a href="">Gabriel Weindel's website</a>
+        <a href="https://gweindel.github.io">Gabriel Weindel's website</a>
       </h1>
 
 <p>Blog posts and thoughts on cognitive science (under construction).</p>
@@ -68,7 +68,7 @@
 
               <li>
                 <a target="_self"
-                   href="/pages/introduction.html#introduction">
+                   href="https://gweindel.github.io/pages/introduction.html#introduction">
                   Introducing myself
                 </a>
               </li>
@@ -83,11 +83,6 @@
             </a>
           </li>
           <li>
-            <a  class="sc-github" href="https://github.com/GWeindel" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-          </li>
-          <li>
             <a  class="sc-orcid" href="https://orcid.org/0000-0002-7592-1686" target="_blank">
               <i class="fab fa-orcid"></i>
             </a>
@@ -99,10 +94,10 @@
   <main>
 
     <nav>
-      <a href="">Home</a>
+      <a href="https://gweindel.github.io">Home</a>
 
-      <a href="category/pages.html">About Me</a>
-      <a href="category/posts.html">Posts</a>
+      <a href="{{ SITEURL }}/introduction.md">About Me</a>
+      <a href="{{ SITEURL }}/category/posts.html">Posts</a>
 
 
     </nav>
@@ -111,12 +106,12 @@
 
 <article>
   <header>
-    <h2><a href="/phd.html#phd">PhD</a></h2>
+    <h2><a href="https://gweindel.github.io/phd.html#phd">PhD</a></h2>
     <p>
-      Posted on mer. 08 avril 2020 in <a href="/category/posts.html">posts</a>
+      Posted on mer. 08 avril 2020 in <a href="https://gweindel.github.io/category/posts.html">posts</a>
 
           &#8226; Tagged with
-              <a href="/tag/phd.html">PhD</a>
+              <a href="https://gweindel.github.io/tag/phd.html">PhD</a>
     </p>
   </header>
   <div>
@@ -124,7 +119,7 @@
 <p>In the mean time you can drop a message via email (firstname.lastname[at …</p>
         <br>
         <a class="btn"
-           href="/phd.html#phd">
+           href="https://gweindel.github.io/phd.html#phd">
           Continue reading
         </a>
   </div>
@@ -150,7 +145,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Gabriel Weindel ",
-  "url" : "",
+  "url" : "https://gweindel.github.io",
   "image": "img/profile.png",
   "description": "Blog posts and thoughts on cognitive science (under construction)."
 }
