--- a/phd.html
+++ b/phd.html
@@ -10,14 +10,14 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/stylesheet/style.min.css">
 
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://gweindel.github.io/theme/font-awesome/css/solid.css">
 
 
 
@@ -45,11 +45,11 @@
 <meta property="og:title" content="PhD"/>
 <meta property="og:description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/phd.html"/>
+<meta property="og:url" content="https://gweindel.github.io/phd.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-04-08 14:10:00+02:00"/>
 <meta property="article:modified_time" content="2020-04-08 14:10:00+02:00"/>
-<meta property="article:author" content="/author/gabriel-weindel.html">
+<meta property="article:author" content="https://gweindel.github.io/author/gabriel-weindel.html">
 <meta property="article:section" content="posts"/>
 <meta property="article:tag" content="PhD"/>
 <meta property="og:image" content="img/profile.png">
@@ -60,12 +60,12 @@
 <body class="white-theme">
   <aside>
     <div>
-      <a href="">
+      <a href="https://gweindel.github.io">
         <img src="img/profile.png" alt="Gabriel Weindel's website" title="Gabriel Weindel's website">
       </a>
 
       <h1>
-        <a href="">Gabriel Weindel's website</a>
+        <a href="https://gweindel.github.io">Gabriel Weindel's website</a>
       </h1>
 
 <p>Blog posts and thoughts on cognitive science (under construction).</p>
@@ -76,7 +76,7 @@
 
               <li>
                 <a target="_self"
-                   href="/pages/introduction.html#introduction">
+                   href="https://gweindel.github.io/pages/introduction.html#introduction">
                   Introducing myself
                 </a>
               </li>
@@ -91,11 +91,6 @@
             </a>
           </li>
           <li>
-            <a  class="sc-github" href="https://github.com/GWeindel" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-          </li>
-          <li>
             <a  class="sc-orcid" href="https://orcid.org/0000-0002-7592-1686" target="_blank">
               <i class="fab fa-orcid"></i>
             </a>
@@ -107,10 +102,10 @@
   <main>
 
     <nav>
-      <a href="">Home</a>
+      <a href="https://gweindel.github.io">Home</a>
 
-      <a href="category/pages.html">About Me</a>
-      <a href="category/posts.html">Posts</a>
+      <a href="{{ SITEURL }}/introduction.md">About Me</a>
+      <a href="{{ SITEURL }}/category/posts.html">Posts</a>
 
 
     </nav>
@@ -120,7 +115,7 @@
       
     <h1 id="phd">PhD</h1>
     <p>
-      Posted on mer. 08 avril 2020 in <a href="/category/posts.html">posts</a>
+      Posted on mer. 08 avril 2020 in <a href="https://gweindel.github.io/category/posts.html">posts</a>
 
     </p>
   </header>
@@ -132,7 +127,7 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/phd.html">PhD</a>
+      <a href="https://gweindel.github.io/tag/phd.html">PhD</a>
     </p>
   </div>
 
@@ -157,7 +152,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Gabriel Weindel ",
-  "url" : "",
+  "url" : "https://gweindel.github.io",
   "image": "img/profile.png",
   "description": "Blog posts and thoughts on cognitive science (under construction)."
 }
