No more rel paths only abs

--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -48,7 +48,7 @@
 
 
 
-  <title>Gabriel Weindel &ndash; Introducing myself</title>
+  <title>Gabriel Weindel &ndash; Introducing&nbsp;myself</title>
 
 </head>
 <body class="white-theme">
@@ -71,7 +71,7 @@
               <li>
                 <a target="_self"
                    href="https://gweindel.github.io/pages/introduction.html#introduction">
-                  Introducing myself
+                  Introducing&nbsp;myself
                 </a>
               </li>
 
@@ -98,8 +98,8 @@
     <nav>
       <a href="https://gweindel.github.io">Home</a>
 
-      <a href="{{ SITEURL }}/introduction.md">About Me</a>
-      <a href="{{ SITEURL }}/category/posts.html">Posts</a>
+      <a href="https://gweindel.github.io/content/pages/presentation.html">About Me</a>
+      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
 
 
     </nav>
@@ -107,12 +107,12 @@
 <article class="single">
   <header>
     
-    <h1 id="introduction">Introducing myself</h1>
+    <h1 id="introduction">Introducing&nbsp;myself</h1>
   </header>
   <div>
-<p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. </p>
-<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to population with cognitive deficits. I usually </p>
-<p>%I am also providing </p>  </div>
+<p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences&nbsp;Cognitives. </p>
+<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to population with cognitive deficits. I&nbsp;usually </p>
+<p>%I am also&nbsp;providing </p>  </div>
 </article>
 
     <footer>
