--- a/phd.html
+++ b/phd.html
@@ -37,13 +37,13 @@
     <meta name="msapplication-TileColor" content="white">
 
 <meta name="author" content="Gabriel Weindel" />
-<meta name="description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …" />
+<meta name="description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …" />
 <meta name="keywords" content="PhD">
 
 
 <meta property="og:site_name" content="Gabriel Weindel"/>
 <meta property="og:title" content="PhD"/>
-<meta property="og:description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …"/>
+<meta property="og:description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://gweindel.github.io/phd.html"/>
 <meta property="og:type" content="article"/>
@@ -77,7 +77,7 @@
               <li>
                 <a target="_self"
                    href="https://gweindel.github.io/pages/introduction.html#introduction">
-                  Introducing myself
+                  Introducing&nbsp;myself
                 </a>
               </li>
 
@@ -104,8 +104,8 @@
     <nav>
       <a href="https://gweindel.github.io">Home</a>
 
-      <a href="{{ SITEURL }}/introduction.md">About Me</a>
-      <a href="{{ SITEURL }}/category/posts.html">Posts</a>
+      <a href="https://gweindel.github.io/content/pages/presentation.html">About Me</a>
+      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
 
 
     </nav>
@@ -122,8 +122,8 @@
 
 
   <div>
-    <p>The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready.</p>
-<p>In the mean time you can drop a message via email (firstname.lastname[at]gmail.com) or twitter, you can also check the github repository on https://www.github.com/GWeindel/PhD_thesis.</p>
+    <p>The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is&nbsp;ready.</p>
+<p>In the mean time you can drop a message via email (firstname.lastname[at]gmail.com) or twitter, you can also check the github repository on&nbsp;https://www.github.com/GWeindel/PhD_thesis.</p>
   </div>
   <div class="tag-cloud">
     <p>
