--- a/archives.html
+++ b/archives.html
@@ -69,7 +69,7 @@
               <li>
                 <a target="_self"
                    href="https://gweindel.github.io/pages/introduction.html#introduction">
-                  Introducing myself
+                  Introducing&nbsp;myself
                 </a>
               </li>
 
@@ -96,8 +96,8 @@
     <nav>
       <a href="https://gweindel.github.io">Home</a>
 
-      <a href="{{ SITEURL }}/introduction.md">About Me</a>
-      <a href="{{ SITEURL }}/category/posts.html">Posts</a>
+      <a href="https://gweindel.github.io/content/pages/presentation.html">About Me</a>
+      <a href="https://gweindel.github.io/category/posts.html">Posts</a>
 
 
     </nav>
