removed last rel paths

--- a/phd.html
+++ b/phd.html
@@ -22,8 +22,8 @@
 
 
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://gweindel.github.io/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://gweindel.github.io/img/favicon.ico" type="image/x-icon">
 
 
     <!-- Chrome, Firefox OS and Opera -->
@@ -52,7 +52,7 @@
 <meta property="article:author" content="https://gweindel.github.io/author/gabriel-weindel.html">
 <meta property="article:section" content="posts"/>
 <meta property="article:tag" content="PhD"/>
-<meta property="og:image" content="img/profile.png">
+<meta property="og:image" content="https://gweindel.github.io/img/profile.png">
 
   <title>Gabriel Weindel &ndash; PhD</title>
 
@@ -61,7 +61,7 @@
   <aside>
     <div>
       <a href="https://gweindel.github.io">
-        <img src="img/profile.png" alt="Gabriel Weindel's website" title="Gabriel Weindel's website">
+        <img src="https://gweindel.github.io/img/profile.png" alt="Gabriel Weindel's website" title="Gabriel Weindel's website">
       </a>
 
       <h1>
@@ -104,7 +104,7 @@
     <nav>
       <a href="https://gweindel.github.io">Home</a>
 
-      <a href="https://gweindel.github.io/content/pages/presentation.html">About Me</a>
+      <a href="https://gweindel.github.io/pages/introduction.html">About Me</a>
       <a href="https://gweindel.github.io/category/posts.html">Posts</a>
 
 
@@ -153,7 +153,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@type" : "Blog",
   "name": " Gabriel Weindel ",
   "url" : "https://gweindel.github.io",
-  "image": "img/profile.png",
+  "image": "https://gweindel.github.io/img/profile.png",
   "description": "Blog posts and thoughts on cognitive science (under construction)."
 }
 </script>
