Removed post section

--- a/pages/introducing-myself.html
+++ b/pages/introducing-myself.html
@@ -36,25 +36,19 @@
     <!-- Microsoft EDGE -->
     <meta name="msapplication-TileColor" content="white">
 
-<meta name="author" content="Gabriel Weindel" />
-<meta name="description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …" />
-<meta name="keywords" content="PhD">
-
-
+    <meta name="author" content="Gabriel Weindel" />
+    <meta name="description" content="Blog posts and thoughts on cognitive science (under construction)." />
 <meta property="og:site_name" content="Gabriel Weindel"/>
-<meta property="og:title" content="PhD"/>
-<meta property="og:description" content="The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is ready. In the mean time you can drop a message via email (firstname.lastname[at …"/>
+<meta property="og:type" content="blog"/>
+<meta property="og:title" content="Gabriel Weindel"/>
+<meta property="og:description" content="Blog posts and thoughts on cognitive science (under construction)."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://gweindel.github.io/phd.html"/>
-<meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2020-04-08 14:10:00+02:00"/>
-<meta property="article:modified_time" content="2020-04-08 14:10:00+02:00"/>
-<meta property="article:author" content="https://gweindel.github.io/author/gabriel-weindel.html">
-<meta property="article:section" content="posts"/>
-<meta property="article:tag" content="PhD"/>
+<meta property="og:url" content="https://gweindel.github.io"/>
 <meta property="og:image" content="https://gweindel.github.io/img/profile.png">
 
-  <title>Gabriel Weindel &ndash; PhD</title>
+
+
+  <title>Gabriel Weindel &ndash; Introducing&nbsp;myself</title>
 
 </head>
 <body class="white-theme">
@@ -112,29 +106,13 @@
 
 <article class="single">
   <header>
-      
-    <h1 id="phd">PhD</h1>
-    <p>
-      Posted on mer. 08 avril 2020 in <a href="https://gweindel.github.io/category/posts.html">posts</a>
-
-    </p>
+    
+    <h1 id="introducing-myself">Introducing&nbsp;myself</h1>
   </header>
-
-
   <div>
-    <p>The Ph.D. manuscript is intended to be public and will be downloable as soon as the university finishes to process the administrative tasks. This page will be updated as soon as the document is&nbsp;ready.</p>
-<p>In the mean time you can drop a message via email (firstname.lastname[at]gmail.com) or twitter, you can also check the github repository on&nbsp;https://www.github.com/GWeindel/PhD_thesis.</p>
-  </div>
-  <div class="tag-cloud">
-    <p>
-      <a href="https://gweindel.github.io/tag/phd.html">PhD</a>
-    </p>
-  </div>
-
-
-
-
-
+<p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences&nbsp;Cognitives. </p>
+<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive&nbsp;deficits.</p>
+<p>For a detailed summary of my curriculm see my <a href="pdfs/CV_GW.pdf"><span class="caps">CV</span></a></p>  </div>
 </article>
 
     <footer>
