Add post section construction and minor fixes

--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
          <li><a href="archives.html">ARCHIVE</a></li>
       </ul>
       <!--foote_bottom_ul_amrc ends here-->
-      <p class="text-center">Theme created by Eric Kim (https://aegis4048.github.io/) @2018</p>
+      <p class="text-center">Website powered by Pelican, theme created by Eric Kim (https://aegis4048.github.io/) @2018</p>
       <div class="container">
           <div class="row justify-content-center">
               <div class="row" align="center">
