--- a/archives.html
+++ b/archives.html
@@ -96,11 +96,18 @@
         <div class="h2 mt-3 title text-center mb-5">Archive</div>
         <hr>
         <div class="meta" style="margin-bottom: 30px; margin-top: 30px;">
+                <a href="/tag/construction.html" class="tag">construction (1)</a>
                 <a href="/tag/phd.html" class="tag">PhD (1)</a>
                 <a href="/tag/resources.html" class="tag">resources (1)</a>
         </div>
         <ul class="double-list">
                 <h2 class="mt-3 mb-3">posts</h2>
+                    <li>
+                        <a href='/construction-notice'>
+                            <h2>Construction notice</h2>
+                            <span>11.04.2020</span>
+                        </a>
+                    </li>
                     <li>
                         <a href='/phd'>
                             <h2>PhD</h2>
@@ -131,7 +138,7 @@
          <li><a href="archives.html">ARCHIVE</a></li>
       </ul>
       <!--foote_bottom_ul_amrc ends here-->
-      <p class="text-center">Theme created by Eric Kim (https://aegis4048.github.io/) @2018</p>
+      <p class="text-center">Website powered by Pelican, theme created by Eric Kim (https://aegis4048.github.io/) @2018</p>
       <div class="container">
           <div class="row justify-content-center">
               <div class="row" align="center">
