Removed text in about footer and minor fixes

--- a/introducing-myself.html
+++ b/introducing-myself.html
@@ -93,9 +93,9 @@
    <div class="container bottom_border">
       <div class="row">
          <div class="col">
-            <h5 class="headin5_amrc col_white_amrc pt2">ABOUT GABRIEL</h5>
+            <h5 class="headin5_amrc col_white_amrc pt2"></h5>
             <!--headin5_amrc-->
-            <p class="mb10"><img id="profile_img" align="left" src="/theme/img/profile.png">My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits. See the About page for my resume.</p>
+            <p class="mb10"><img id="profile_img" align="left" src="/theme/img/profile.png"></p>
             <p><i class="fa fa-envelope mr-2"></i>firstname.lastname[at]gmail.com</p>
          </div>
       </div>
