--- a/about.html
+++ b/about.html
@@ -103,9 +103,6 @@
     <div class="section about-button-container no-padding">
        <div class="container">
           <div class=" row justify-content-center">
-              <a class="btn btn-default btn-lg btn-icon about-button mr-3" href="">
-                  <i class="fab fa-linkedin-in"></i>
-              </a>
               <a class="btn btn-default btn-round btn-lg btn-icon about-button" href="https://github.com/GWeindel">
                   <i class="fab fa-github"></i>
               </a>
@@ -119,12 +116,13 @@
                     <div class="col">
                         <div class="h2 mt-3 title text-center mb-5">About</div>
                         <hr>
-                        <p>Hello everyone, my name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives.</p>
+                        <p>Hello everyone, my name is Gabriel Weindel (he/him) and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives.</p>
 						<p> As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits.</p>
 						
 						<p> If you want to access my list of published article see my google 
 <a href="https://scholar.google.fr/citations?user=o_fW4gIAAAAJ&hl=fr&oi=ao"> scholar </a> and <a href="https://orcid.org/0000-0002-7592-1686"> ORCID</a> profiles
 </p>
+<p>Please Note that the website is under construction</p>
                     </div>
                 </div>
             </div>
@@ -136,9 +134,9 @@
    <div class="container bottom_border">
       <div class="row">
          <div class="col">
-            <h5 class="headin5_amrc col_white_amrc pt2">ABOUT GABRIEL</h5>
+            <h5 class="headin5_amrc col_white_amrc pt2"></h5>
             <!--headin5_amrc-->
-            <p class="mb10"><img id="profile_img" align="left" src="/theme/img/profile.png">My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits. See the About page for my resume.</p>
+            <p class="mb10"><img id="profile_img" align="left" src="/theme/img/profile.png"></p>
             <p><i class="fa fa-envelope mr-2"></i>firstname.lastname[at]gmail.com</p>
          </div>
       </div>
