--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                         <div class="h2 mt-3 title text-center mb-5">About</div>
                         <hr>
                         <p>Hello everyone, my name is Gabriel Weindel (he/him) and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives.</p>
-						<p> As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits.</p>
+						<p> I am mainly interested in nerdy stuff about computational models of cognition (especially decision making) and Bayesian statistics. As a trained neuropsychologist, my interest goes also to cognitive deficits associated with clinical conditions such as mental illness and brain injuries as I think that, in the long tradition of neuropsychologist, care of patients goes along with advance in scientific knowledge.</p>
 						
 						<p> If you want to access my list of published article see my google 
 <a href="https://scholar.google.fr/citations?user=o_fW4gIAAAAJ&hl=fr&oi=ao"> scholar </a> and <a href="https://orcid.org/0000-0002-7592-1686"> ORCID</a> profiles
