--- a/construction-notice.html
+++ b/construction-notice.html
@@ -136,7 +136,7 @@
         <aside>
         <nav>
         <ul class="articles-timeline">
-            <li class="previous-article">« <a href="/phd" title="Previous: PhD">PhD</a></li>
+            <li class="next-article"><a href="/phd" title="Next: PhD">PhD</a> »</li>
         </ul>
         </nav>
         </aside>
