--- a/lecture-on-linear-mixed-models.html
+++ b/lecture-on-linear-mixed-models.html
@@ -140,12 +140,12 @@
         <div class="article_content">
             
             <p><strong>Introduction</strong></p>
-<p>This is a serie of lecture I gave to doctoral students in psychology and neuroscience at Aix-Marseille Université in April 2021. The course aimed at giving enough information and examples about mixed models to allow students to think about how they can apply such models to their data.</p>
+<p>This is a series of lectures I gave to doctoral students in psychology and neuroscience at Aix-Marseille Université in April 2021. The course aimed at giving enough information and examples about mixed models to allow students to think about how they can apply such models to their data.</p>
 <p>All the course is intended to be "hands-on" and therefore the R code is provided with reproducible examples (mainly simulations). The code is meant to be accessible to beginners so it remains simple and redundant (and... I'm a python user so I don't get all the tidyverse things for now).</p>
 <p>All the content of the slides can be recreated as an interactive jupyter notebook where you can easily live code inside the presentation thanks to the RISE python package. If you're interested in replicating this lecture take a look at the root repository (https://github.com/GWeindel/lecture_mixed_models_AMU_2021) with all the instructions.</p>
 <p><strong>Content of the course</strong> :</p>
 <p><strong>Module 1</strong>
-The first module is dedicated to linear models both in the perspective of a reminder and of extending students knowledge with what can be done using linear models (prediction, factor recoding, etc.)</p>
+The first module is dedicated to linear models both as a reminder and to extend students knowledge on what can be done using linear models (prediction, factor recoding, etc.)</p>
 <p>The presentation can be found <a href="https://gweindel.github.io/lecture_mixed_models_AMU_2021/Module_1.slides.html">here</a> (best to open in a separate tab)</p>
 <p><strong>Module 2</strong>
 The second module introduces the core aspect of linear mixed models in a frequentist context and using the '''lme4''' R package. We start by illustrating the concept of maximum likelihood, hierarchies in the data and how to account for these hierarchies.</p>
