--- a/lecture-on-linear-mixed-models.html
+++ b/lecture-on-linear-mixed-models.html
@@ -146,7 +146,7 @@
 <p><strong>Content of the course</strong> :</p>
 <p><strong>Module 1</strong>
 The first module is dedicated to linear models both as a reminder and to extend students knowledge on what can be done using linear models (prediction, factor recoding, etc.)</p>
-<p>The presentation can be found <a href="https://gweindel.github.io/lecture_mixed_models_AMU_2021/Module_1.slides.html">here</a> (best to open in a separate tab)</p>
+<p>The presentation can be found <a href="https://gweindel.github.io/lecture_mixed_models_AMU_2021/Module_1.slides.html">here</a> (best to open in a separate tab and to navigate across slides with the space bar)</p>
 <p><strong>Module 2</strong>
 The second module introduces the core aspect of linear mixed models in a frequentist context and using the '''lme4''' R package. We start by illustrating the concept of maximum likelihood, hierarchies in the data and how to account for these hierarchies.</p>
 <p>The presentation can be found <a href="https://gweindel.github.io/lecture_mixed_models_AMU_2021/Module_2.slides.html">here</a></p>
