Added notebook integration using pelican_jupyter

--- a/archives.html
+++ b/archives.html
@@ -75,7 +75,7 @@
                     <ul class="navbar-nav">
                     
                         <li id="last-item" class="nav-item">
-                            <a class="nav-link rem_08" href="">Posts</a>
+                            <a class="nav-link rem_08" href="/">Posts</a>
                         </li>
                         <!--<li class="nav-item active">
                             <a class="nav-link rem_08" href="/resources.html">Resources</a>
@@ -146,7 +146,8 @@
          <li><a href="archives.html">ARCHIVE</a></li>
       </ul>
       <!--foote_bottom_ul_amrc ends here-->
-      <p class="text-center">Website powered by the Pelican python package and github pages. \ Theme forked from "aegis" created by Eric Kim (https://aegis4048.github.io/) @2018</p>
+      <p class="text-center">Website powered by the Pelican python package and github pages. 
+ Theme forked from "aegis" created by Eric Kim (https://aegis4048.github.io/) @2018</p>
       <div class="container">
           <div class="row justify-content-center">
               <div class="row" align="center">
