--- a/phd.html
+++ b/phd.html
@@ -141,7 +141,15 @@
             
             <p>Hi everyone,</p>
 <p>I had my PhD defense last month and I'm happy to share with you the manuscript that can be found on <a href="https://thesiscommons.org/342zp">thesis commons</a>. Along with the manuscript there is also an associated <a href="https://osf.io/rx73c/">OSF</a> project page where you can find most of the code used for the analysis in the PhD manuscript, some data is still missing but will be uploaded when the chapters get published.</p>
-<p>There is also a live recording of the presentation available on <a href="https://www.youtube.com/watch?v=-ACuGrZVuDE">youtube</a></p>
+<p>There is also a live recording of the presentation available :
+<span class="videobox">
+                    <iframe width="640" height="390"
+                        src='https://www.youtube.com/embed/-ACuGrZVuDE'
+                        frameborder='0' webkitAllowFullScreen
+                        mozallowfullscreen allowFullScreen>
+                    </iframe>
+                </span>
+on <a href="https://www.youtube.com/watch?v=-ACuGrZVuDE">youtube</a></p>
 <p>Cheers !</p>
         </div>
         <hr/>
