--- a/phd.html
+++ b/phd.html
@@ -148,8 +148,7 @@
                         frameborder='0' webkitAllowFullScreen
                         mozallowfullscreen allowFullScreen>
                     </iframe>
-                </span>
-on <a href="https://www.youtube.com/watch?v=-ACuGrZVuDE">youtube</a></p>
+                </span></p>
 <p>Cheers !</p>
         </div>
         <hr/>
