--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                 </header>
                 <div class="article_content">
-                    <p>A brief tutorial on how to get the R packages runDMC in a jupyter environment through anaconda.</p>
+                    <p>A brief tutorial on how to get the R package runDMC in a jupyter environment through anaconda.</p>
                 </div>
                 <div class="meta no-margin">
                     <div><a href="/rundmc-in-a-jupyter-notebook" class="read_more">Read more &#8594;</a></div>
